# YOLOLabelsTool

./: .gitignore  CLAUDE.md  LICENSE  README.md  YoloLabelsTrainTool.spec  build.bat  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  功能实现分析报告.md
qss/: colorful_theme.qss  dark_theme.qss  eyecare_theme.qss  light_theme.qss
src/: __init__.py
src/core/: __init__.py  annotation.py  class_manager.py  image_manager.py  model_manager.py
src/ui/: __init__.py  annotation_canvas.py  class_dialog.py  export_dialog.py  main_window.py  panels.py  region_selector.py  train_dialog.py  train_progress_dialog.py  validation_dialog.py
src/utils/: __init__.py  dataset_splitter.py  i18n.py  logger.py  widget_helpers.py  win32_helpers.py  yolo_exporter.py
tests/: COCO8.yaml  conftest.py  data.yaml  test.txt
translations/: en_US.ini  zh_CN.ini
yolo_tool/: __init__.py  yolo_train.py
